welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = false
    val a = 1
    while(a==1){
    	avance()
    }
    couleur = getCouleurSol()
    do {
    	avance()
    	
    }
   	 	while(couleur == Color.green)  		
    				
   	 	
    		if(estFaceMur){
    	return
    }
        return couleur
}        
